--- a/css/app.css
+++ b/css/app.css
@@ -155,3 +155,93 @@ button .navbar-toggler-icon {
 .square.clicked.bomb {
     background-color: tomato;
 }
+
+#info {
+    cursor: pointer;
+}
+
+#info-layover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(41, 40, 40, 0.404);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 0 1rem;
+}
+
+.info-container {
+    position: relative;
+    background-color: rgb(206, 206, 206);
+    border-radius: 2rem;
+    padding: 1rem 2rem;
+    font-size: 0.75rem;
+}
+
+.info-container h2 {
+    font-size: 1.25rem;
+}
+
+@media (min-width: 576px) {
+    .info-container {
+        padding: 2rem 4rem;
+        font-size: 1rem;
+    }
+
+    .info-container h2 {
+        font-size: 1.5rem;
+    }
+}
+
+@media (min-width: 992px) {
+    #info-layover {
+        padding: 0 5rem;
+    }
+
+    .info-container {
+        font-size: 1.25rem;
+    }
+
+    .info-container h2 {
+        font-size: 2rem;
+    }
+}
+
+@media (min-width: 1200px) {
+    .info-container h2 {
+        font-size: 3rem;
+    }
+
+    #info-layover {
+        padding: 0 5rem;
+    }
+}
+
+@media (min-width: 1400px) {
+    .info-container h2 {
+        font-size: 3rem;
+    }
+
+    #info-layover {
+        padding: 0 10rem;
+    }
+}
+
+#exit {
+    position: absolute;
+    top: 20px;
+    right: 40px;
+    cursor: pointer;
+    color: tomato;
+    border: 1px solid black;
+    width: 30px;
+    aspect-ratio: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
+}
