--- a/css/app.css
+++ b/css/app.css
@@ -27,16 +27,17 @@ main {
 footer {
     flex-basis: 0;
     background-color: rgb(36, 36, 36);
+    color: #FFF;
+    font-size: 0.75rem;
 }
 
 footer a {
     color: #FFF;
     text-decoration: none;
-    font-size: 0.75rem;
 }
 
 @media (min-width:992px) {
-    footer a {
+    footer {
         font-size: 1rem;
     }
 }
